Price has margin on smaller divices to prevent it from sticking to the pictures.

--- a/src/components/product/productDetails/productDetails.module.css
+++ b/src/components/product/productDetails/productDetails.module.css
@@ -47,6 +47,7 @@
 
     .price {
         font-size: 2rem;
+        margin-top: 1rem;
     }
 
     .raiting {
@@ -277,6 +278,7 @@
     .purchasing {  
         .price {
             line-height: 1;
+            margin-top: 0;
         }
 
         label {
